Integrate semantic search into dashboard, get rid of registry build, enrich text with more data (terms), small docker for indexer